plans/260503-k3s-argocd-wg-easy/gitops-repo-example/manifests/dev/tc-ims-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tc-ims-be
  namespace: dev
spec:
  selector:
    app: tc-ims-be
    env: dev
  ports:
    - port: 80
      targetPort: 80
